--- a/Stage1_ClintonEtiuzale_MovieDatasetAnalysis.ipynb
+++ b/Stage1_ClintonEtiuzale_MovieDatasetAnalysis.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/myname1sace/Movie_Analysis/blob/main/Stage1_ClintonEtiuzale_MovieDatasetAnalysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "88728e36-4b49-43dc-abfe-a63859f86374",
       "metadata": {
         "id": "88728e36-4b49-43dc-abfe-a63859f86374"
@@ -1259,8 +1249,7 @@
       "version": "3.13.5"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
